début de mise en forme de la page d'accueil

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,34 +2,32 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  margin: 0;
 }
-
-header {
+a {
+  text-decoration: none;
+}
+#header {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 90px;
+  padding: 0 6.9444444444vw 0;
+  height: 9.5833333333vw;
 }
-
-h1 {
+#header h1 {
   color: #901c1c;
-  margin-right: 100px;
+  font-size: 2.5vw;
+  font-weight: 400;
+  line-height: 3.2638888889vw;
 }
-
-.logo {
-  height: 50px;
-  margin-left: 100px;
+#header .logo {
+  height: 3.4722222222vw;
 }
-
 .photographer-section {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 70px;
-  margin-top: 100px;
+  gap: 5.4166666667vw;
+  padding: 4.1666666667vw 0 7.7777777778vw;
 }
-
 .photographer-section article {
   justify-self: center;
   display: flex;
@@ -37,13 +35,39 @@ h1 {
   align-items: center;
   flex-direction: column;
 }
-
-.photographer-section article h2 {
-  color: #d3573c;
-  font-size: 36px;
+.portrait {
+  border-radius: 50%;
+  width: 13.8888888889vw;
+  height: 13.8888888889vw;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
 }
-
-.photographer-section article img {
-  height: 200px;
-  width: 200px;
+.photographer-section article a {
+  width: 21.5277777778vw;
+  height: 19.2361111111vw;
+  text-align: center;
+}
+.photographer-section article a .name {
+  margin-top: 1.3888888889vw;
+  font-size: 2.5vw;
+  font-weight: 400;
+  line-height: 3.2638888889vw;
+}
+.name {
+  color: #d3573c;
+}
+.photographer-section article .location {
+  font-size: 0.9027777778vw;
+  font-weight: 400;
+  line-height: 1.1805555556vw;
+}
+.photographer-section article .tagline {
+  margin: 0.2083333333vw auto;
+  font-size: 0.6944444444vw;
+  font-weight: 400;
+  line-height: 0.9027777778vw;
+}
+.photographer-section article .price {
+  font-size: 0.625vw;
+  font-weight: 400;
+  line-height: 0.8333333333vw;
 }
