--- a/src/css/photographer.css
+++ b/src/css/photographer.css
@@ -174,3 +174,111 @@ button {
   font-weight: 700;
   line-height: 2.1vw;
 }
+
+/* modal de contact */
+.modal-bg {
+  position: fixed;
+  top: 0;
+  z-index: 15;
+  overflow: auto;
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+.modal {
+  display: flex;
+  align-items: center;
+  margin: 0.84% auto;
+}
+#contact {
+  background-color: rgba(196, 196, 196, 0.4);
+}
+#contact .modal {
+  flex-direction: column;
+  border-radius: 5px;
+  padding: 15px 35px 38px;
+  width: 100%;
+  max-width: 680px;
+  background-color: #d3573c;
+  mix-blend-mode: normal;
+  filter: drop-shadow(-5px 10px 30px rgba(0, 0, 0, 0.25));
+}
+#contact .modal header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding-bottom: 19px;
+  width: 100%;
+}
+#contact .modal header h1 {
+  font-size: 64px;
+  font-weight: normal;
+  line-height: 83px;
+}
+#contact .modal header .contact-close {
+  position: relative;
+  z-index: 100;
+  display: flex;
+  padding: 0;
+  background-color: inherit;
+}
+#contact .modal header .contact-close .icon-close {
+  background-color: #fff;
+}
+.icon-close {
+  width: 2.9vw;
+  height: 2.9vw;
+  -webkit-mask: url("../assets/icons/close.svg");
+  mask: url("../assets/icons/close.svg");
+  -webkit-mask-size: 2.9vw;
+  mask-size: 2.9vw;
+}
+#contact .modal .modal-body {
+  width: 100%;
+}
+#contact .modal .modal-body .formData {
+  display: flex;
+  flex-direction: column;
+}
+#contact .modal .modal-body .formData label {
+  color: #312e2e;
+  font-size: 36px;
+  line-height: 47px;
+}
+#contact .modal .modal-body .formData input {
+  height: 68px;
+}
+#contact .modal .modal-body .formData textarea {
+  height: 170px;
+  resize: none;
+}
+#contact .modal .modal-body .formData .text-control {
+  border: 3px solid rgba(0, 0, 0, 0);
+  border-radius: 5px;
+  outline: none;
+  padding: 8px 20px;
+  width: 100%;
+  font-family: inherit;
+  font-size: 24px;
+  line-height: 31px;
+}
+#contact .modal .modal-body .formData.message {
+  margin: 10px 0 26px;
+}
+#contact .modal .modal-body .formData[data-error]::after {
+  display: block;
+  margin: 8px 0;
+  content: attr(data-error);
+  color: #901c1c;
+  font-size: 18px;
+  line-height: 23px;
+  transition: 0.3s;
+}
+#contact .modal .modal-body .formData[data-error]::after .text-control {
+  border: 3px solid #911c1c;
+}
+#contact .modal .modal-body .submit-button {
+  padding: 23px 50px;
+  font-size: 18px;
+  line-height: 23px;
+}
